# evolving-robot

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: blog-post.md  how-it-works.md  index.html
missions/: night_rounds.mission.yaml  patrol.mission.yaml  stat_delivery.mission.yaml
odyssey_ext/: __init__.py  gemma_rest.py  sim2d_runner.py
robot_brain/: __init__.py  dream.py  evolve.py  gemma.py  pilot.py  skill_gate.py  skills.py
robot_brain/skills/: .agentvcsignore  .gitignore  .skillmapignore
robot_brain/skills/.claude/skills/checkpoint-inspection/: SKILL.md
robot_brain/skills/.claude/skills/night-rounds/: SKILL.md
robot_brain/skills/.claude/skills/nurse-handoff/: SKILL.md
robot_brain/skills/.claude/skills/patient-check/: SKILL.md
robot_brain/skills/.claude/skills/patrol-route/: SKILL.md
robot_brain/skills/.claude/skills/staff-interaction/: SKILL.md
robot_brain/skills/.skill-map/: settings.json
scripts/: dream_demo.py  drive_sim.py  evolve_demo.py  evolve_live.py  gate_demo.py  night_shift.py  run_mission.py  smoke_gemma.py
sim2d/: __init__.py  server.py  viewer.html
tools/gifcap/: README.md  night_story.py  record.js
